--- a/src/css/theme.css
+++ b/src/css/theme.css
@@ -4,7 +4,7 @@ body {
 	--app-main-font-family: 'Raleway', sans-serif;
 	--app-heading-font-family: 'Mali', serif;
 
-	--app-color-shell: white;
+	--app-color-shell: #011627;
 
 	--app-color-light: white;
 	--app-color-light-rgb: 255, 255, 255;
